--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-maps",
+  "name": "react-country-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-router": "^5.0.0",
+    "react-router": "^3.0.5",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
-    "redux-logger": "^3.0.6"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
